--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ DATE      :<input type="text" placeholder="enter submit date"><br>
 <p style= text-align:center;color:blue>@registration</p>
 <p style=text-align:center;color:blue>Instagram</p>
 </footer>
-<script src="first02.js"></script>
+<script src="hack.js"></script>
 </body>
 
 
