--- a/index.html
+++ b/index.html
@@ -4,21 +4,55 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>first</title>
-    <link rel="stylesheet" href="style.css">
-</head>
+
+    
+<style>
+body{
+  background-image:url("58bd4fc9ebfccc1f2de419529bbf1a12.jpg");
+   background-repeat: no-repeat;
+   background-attachment: fixed;
+   background-size: 100% 100%; 
+}
+header{
+  border-radius: 10px;
+}
+.navbar{
+  background-color: rgb(0, 0, 0);
+  border-radius: 25px;
+  height: 40px;
+}
+.navbar ul{
+  overflow:auto;
+
+}
+.navbar li{
+  list-style: none;
+  float:left;
+}
+.navbar li a{
+  padding: 2px 3px;
+  text-decoration: none;
+  color:white;
+}
+</style>
+
+  </head>
+
 <body>
- <header> <table border="1">
-<tr> <th> EXPERIENCE</th>
-<th> EDUCATION</th>
-<th>JOBS</th>
-<TH>       PROJECTS</TH>
-<TH>SIGN</TH>
-<th
+ <header>
+ <nav class="navbar">
+  <ul>
+    <li><a href=""><b> Home</b></a></li>
+    <li><a href=""><b>About</b></a></li>
+    <li><a href=""><b>Stream  </b></a></li>
+    <li><a href=""><b>Login</b> </a></li>
+  </ul>
+ </nav>
 
 
-</tr>
 
-  </table></header><hr>
+</header><hr>
+
 <h1 style=text-align:center;color:red> REGISTRATION FORM</h1>
 
 <form><PRE>
@@ -46,7 +80,7 @@ DATE      :<input type="text" placeholder="enter submit date"><br>
 <input type="radio" name="place">Kanpur
 <input type="radio" name="place">Prayagraj<br>
 
-<h3> SUBMIT YOUR FORM</h3>
+<h3>     </h3>
 
 <button type="submit" ;>SUBMIT</button>
 </form>
@@ -59,7 +93,8 @@ DATE      :<input type="text" placeholder="enter submit date"><br>
 <p style= text-align:center;color:blue>@registration</p>
 <p style=text-align:center;color:blue>Instagram</p>
 </footer>
-<script src="hack.js"></script>
+<script src=""></script>
+<button src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTLUbzuYCW_zHOMeGQthl9_q4rXg2jUm64nyQ&usqp=CAU">click</button>
 </body>
 
 
